--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "granita"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.70"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 description = "A load testing framework for simulating realistic traffic and measuring system performance."
 repository = "https://github.com/dilico/granita"
 
