--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,10 +18,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust stable
-        run: rustup toolchain install stable --profile minimal
-
-      - name: Install components
-        run: rustup component add rustfmt clippy --toolchain stable
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
@@ -49,7 +48,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        run: rustup toolchain install ${{ matrix.rust }} --profile minimal
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust }}
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
