--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust stable
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rs/toolchain@v1
         with:
-          components: rustfmt, clippy
+          toolchain: stable
+          override: true
+          components: clippy, rustfmt
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
@@ -29,10 +31,10 @@ jobs:
           toolchain: stable
 
       - name: rustfmt
-        run: cargo +stable fmt -- --check
+        run: cargo fmt -- --check
 
       - name: clippy
-        run: cargo +stable clippy -- -D warnings
+        run: cargo clippy -- -D warnings
 
   test:
     name: Test (${{ matrix.os }}, Rust ${{ matrix.rust }})
@@ -48,9 +50,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
+          override: true
+          components: clippy, rustfmt
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
@@ -59,13 +63,13 @@ jobs:
           toolchain: ${{ matrix.rust }}
 
       - name: Build
-        run: cargo +${{ matrix.rust }} build --verbose
+        run: cargo build --verbose
 
       - name: Run tests
-        run: cargo +${{ matrix.rust }} test --verbose
+        run: cargo test --verbose
 
       - name: Doc check
-        run: cargo +${{ matrix.rust }} doc --no-deps
+        run: cargo doc --no-deps
 
   deny:
     name: Cargo deny
