fix(ci): replace non-existent cargo-cache action with rust-cache
Replace actions-rs/cargo-cache@v2 with Swatinem/rust-cache@v2
as the actions-rs organization has archived their repositories.
Update cache configuration to use toolchain parameter instead
of manual path specification.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,12 +25,10 @@ jobs:
           components: clippy, rustfmt
 
       - name: Cache cargo
-        uses: actions-rs/cargo-cache@v2
+        uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
+          key: lint-1.85.0
+          toolchain: 1.85.0
 
       - name: rustfmt
         run: cargo fmt -- --check
@@ -61,12 +59,10 @@ jobs:
         run: rustc --version
 
       - name: Cache cargo
-        uses: actions-rs/cargo-cache@v2
+        uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
+          key: test-${{ matrix.os }}-1.85.0
+          toolchain: 1.85.0
 
       - name: Build
         run: cargo build --verbose
