--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,12 +24,6 @@ jobs:
           override: true
           components: clippy, rustfmt
 
-      - name: Cache cargo
-        uses: Swatinem/rust-cache@v2
-        with:
-          key: lint-1.85.0
-          toolchain: 1.85.0
-
       - name: rustfmt
         run: cargo fmt -- --check
 
@@ -37,13 +31,14 @@ jobs:
         run: cargo clippy -- -D warnings
 
   test:
-    name: Test (Rust 1.85.0)
+    name: Test (${{ matrix.os }}, Rust ${{ matrix.rust }})
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        rust: [1.85.0, stable]
 
     steps:
       - uses: actions/checkout@v4
@@ -51,7 +46,7 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.85.0
+          toolchain: ${{ matrix.rust }}
           override: true
           components: clippy, rustfmt
 
@@ -61,17 +56,16 @@ jobs:
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
         with:
-          key: test-${{ matrix.os }}-1.85.0
-          toolchain: 1.85.0
+          key: test-${{ matrix.os }}-${{ matrix.rust }}
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo +${{ matrix.rust }} build --verbose
 
       - name: Test
-        run: cargo test --verbose
+        run: cargo +${{ matrix.rust }} test --verbose
 
       - name: Doc check
-        run: cargo doc --no-deps
+        run: cargo +${{ matrix.rust }} doc --no-deps
 
   deny:
     name: Cargo deny
