fix: correct deny.toml config and revert rust version to 1.85
- Fix deny.toml to use correct cargo-deny configuration format
  - Change [advisories] to use deny = true instead of array
  - Fix [licenses] section with proper keys (unlicensed, allow-osi-fsf-free, copyleft)
  - Rename [dependencies] to [bans] section
  - Remove invalid [crate] section
- Revert rust-version in Cargo.toml from 1.86 to 1.85
- Update CI to test only against stable Rust instead of 1.86.0

--- a/deny.toml
+++ b/deny.toml
@@ -1,15 +1,14 @@
 [advisories]
 # Fail on any security advisory affecting dependencies
-deny = ["RUSTSEC-0000-0000"]
+deny = true
 
 [licenses]
 # Block packages without license info
-deny = ["unknown"]
+unlicensed = "deny"
+# Ensure license is declared and a LICENSE file exists
+allow-osi-fsf-free = "both"
+copyleft = "deny"
 
-[dependencies]
+[bans]
 # Block git dependencies (recommended for published crates)
 deny = ["git"]
-
-[crate]
-# Ensure license is declared and a LICENSE file exists
-deny = ["license-file-missing", "license-not-declared"]
