chore: update cargo-deny action and add source restrictions
- Update EmbarkStudios/cargo-deny-action from v1 to v2
- Remove version field from deny.toml (auto-detected by cargo-deny)
- Add [sources] section to deny unknown registries and git sources

--- a/deny.toml
+++ b/deny.toml
@@ -1,5 +1,3 @@
-version = 3
-
 [advisories]
 deny = true
 
@@ -10,3 +8,7 @@ deny = ["GPL-3.0"]
 
 [bans]
 deny = ["git"]
+
+[sources]
+unknown-registry = "deny"
+unknown-git = "deny"
