--- a/deny.toml
+++ b/deny.toml
@@ -1,14 +1,47 @@
-[advisories]
-deny = true
+[graph]
+# cargo-deny is really only ever intended to run on the "normal" tier-1 targets
+targets = [
+    "x86_64-unknown-linux-gnu",
+    "aarch64-unknown-linux-gnu",
+    "x86_64-unknown-linux-musl",
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+]
+all-features = true
 
-[licenses]
-unlicensed = "deny"
-allow = ["MIT", "Apache-2.0"]
-deny = ["GPL-3.0"]
+[advisories]
+unmaintained = "workspace"
+unsound = "all"
+ignore = [
+]
 
 [bans]
-deny = ["git"]
+multiple-versions = "deny"
+wildcards = 'deny'
+deny = [
+    { crate = "git2", use-instead = "gix" },
+    { crate = "openssl", use-instead = "rustls" },
+    { crate = "openssl-sys", use-instead = "rustls" },
+    "libssh2-sys",
+    { crate = "cmake", use-instead = "cc" },
+    { crate = "windows", reason = "bloated and unnecessary", use-instead = "ideally inline bindings, practically, windows-sys" },
+]
+skip-tree = [
+    { crate = "windows-sys", reason = "a foundational crate for many that bumps far too frequently to ever have a shared version" },
+]
 
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+
+[licenses]
+# We want really high confidence when inferring licenses from text
+confidence-threshold = 0.93
+allow = [
+    "Apache-2.0",
+    "MIT",
+    "Unicode-3.0",
+]
+exceptions = [
+]
